[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
ocl = "0.19.7"
pyo3 = { version = "0.18", features = ["extension-module"] }
rust-gpu-tools = "0.7.2"

[lib]
name = "gormless_core"
crate-type = ["cdylib"]
path = "rust/src/lib.rs"

[[bin]]
name = "gormless-cli"
path = "rust/src/main.rs"