[tool.poetry]
name = "gormless"
version = "0.1.0"
description = ""
authors = ["Rikk Hill <rikk@unashamedly.co.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
maturin = "^1.7.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["maturin>=1.7.4"]
build-backend = "maturin"
